[gd_scene load_steps=15 format=3 uid="uid://dcpb81d1t55qc"]

[ext_resource type="Texture2D" uid="uid://p2emc53hc5bb" path="res://Assets/Textures/texture_01.png" id="1_eopvo"]
[ext_resource type="Script" uid="uid://ce88t8fmlo1o6" path="res://Assets/Levels/level.gd" id="1_hsbfi"]
[ext_resource type="PackedScene" uid="uid://cngsihou6ysf0" path="res://Assets/UI/ui.tscn" id="5_j60fc"]
[ext_resource type="PackedScene" uid="uid://ehpuvvgh2qb5" path="res://Assets/Player/player.tscn" id="6_s6nh1"]
[ext_resource type="PackedScene" uid="uid://dk0d1u3nqvvr6" path="res://Assets/Levels/island.tscn" id="6_uhj1v"]
[ext_resource type="PackedScene" uid="uid://nxpdp36566tk" path="res://Assets/Platform/spawn_zone.tscn" id="7_e4egn"]
[ext_resource type="PackedScene" uid="uid://cf6t4h2ekief0" path="res://Sky/sky.tscn" id="7_jkw51"]
[ext_resource type="PackedScene" uid="uid://b1rucljvmkffl" path="res://Assets/Levels/platform_generator.tscn" id="8_nbnl2"]

[sub_resource type="CylinderMesh" id="CylinderMesh_qdj0s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hbebs"]
albedo_texture = ExtResource("1_eopvo")
uv1_triplanar = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4x75r"]
height = 0.704138
radius = 1.76577

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_stmqa"]
albedo_texture = ExtResource("1_eopvo")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_msg5t"]
material = SubResource("StandardMaterial3D_stmqa")

[sub_resource type="BoxShape3D" id="BoxShape3D_ldbch"]

[node name="Level" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0)
script = ExtResource("1_hsbfi")

[node name="UI" parent="." instance=ExtResource("5_j60fc")]
layer = 0

[node name="Player" parent="." instance=ExtResource("6_s6nh1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.529884, -56.2265)

[node name="Island" parent="." instance=ExtResource("6_uhj1v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -55)

[node name="Teleport" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -43.7024)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Teleport"]
transform = Transform3D(2, 0, 0, 0, 0.3, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("CylinderMesh_qdj0s")
surface_material_override/0 = SubResource("StandardMaterial3D_hbebs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Teleport"]
shape = SubResource("CylinderShape3D_4x75r")

[node name="Plane" type="Node3D" parent="."]
transform = Transform3D(25, 0, 0, 0, 1, 0, 0, 0, 25, 0, 0, -11.688)

[node name="StaticBody3D" type="StaticBody3D" parent="Plane"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Plane/StaticBody3D"]
mesh = SubResource("BoxMesh_msg5t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane/StaticBody3D"]
shape = SubResource("BoxShape3D_ldbch")

[node name="Spawn_1" type="Node3D" parent="Plane"]
transform = Transform3D(0.05, 0, 0, 0, 0.1, 0, 0, 0, 0.05, 0.46094, 0.503227, -0.46926)

[node name="StaticBody3D" parent="Plane/Spawn_1" instance=ExtResource("7_e4egn")]

[node name="Spawn_2" type="Node3D" parent="Plane"]
transform = Transform3D(0.05, 0, 0, 0, 0.1, 0, 0, 0, 0.05, 0, 0.513, -0.469482)

[node name="StaticBody3D" parent="Plane/Spawn_2" instance=ExtResource("7_e4egn")]

[node name="Spawn_3" type="Node3D" parent="Plane"]
transform = Transform3D(0.05, 0, 0, 0, 0.1, 0, 0, 0, 0.05, -0.459506, 0.602673, -0.469496)

[node name="StaticBody3D" parent="Plane/Spawn_3" instance=ExtResource("7_e4egn")]

[node name="PlatformGenerator" parent="." instance=ExtResource("8_nbnl2")]

[node name="Sky" parent="." instance=ExtResource("7_jkw51")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80664, 0)

[connection signal="body_entered" from="Teleport" to="." method="_on_teleport_body_entered"]
